# xlocale-config

./: .gitignore  Makefile.am  README  configure.ac  xlocale-config.pc.in
specs/: Makefile.am
specs/i18n/: Makefile.am
